# DeviceWarLock

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xiaoc/warlock/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/xiaoc/warlock/: IServerCallback.aidl
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/inc/: warlockCore.h
app/src/main/cpp/inc/collector/: BasicInfoCollector.h  ICollector.h  MiscInfoCollector.h  NativeCollector.h  SystemInfoCollector.h
app/src/main/cpp/inc/constants/: Constants.h
app/src/main/cpp/inc/crypto/: EncryptManager.h  crypto.h
app/src/main/cpp/inc/detector/: FridaDetector.h  MiscDetector.h  NativeDetector.h  SandboxDetector.h  SystemDetector.h  VirtualDetector.h
app/src/main/cpp/inc/network/: NetworkManager.h
app/src/main/cpp/inc/utils/: Base64Utils.h  CommandUtils.h  DetectorUtils.h  FileUtils.h  IDetector.h  LogUtils.h  MiscUtil.h  StringUtils.h  SyscallUtils.h  XsonCollector.h  allheader.h
app/src/main/cpp/src/: warlockCore.cpp  warlockServer.cpp
app/src/main/cpp/src/collector/: BasicInfoCollector.cpp  MiscInfoCollector.cpp  NativeCollector.cpp  SystemInfoCollector.cpp
app/src/main/cpp/src/crypto/: AES.cpp  Base64.cpp  EncryptManager.cpp  MD5.cpp
app/src/main/cpp/src/detector/: FridaDetector.cpp  MiscDetector.cpp  NativeDetector.cpp  SandboxDetector.cpp  SystemDetector.cpp  VirtualDetector.cpp
app/src/main/cpp/src/netlink/: NetlinkConnection.cpp  NetlinkConnection.h  bionic_netlink.cpp  bionic_netlink.h  ifaddrs.cpp  syscall_x86.s  syscall_x86_64.s
app/src/main/cpp/src/network/: NetworkManager.cpp
app/src/main/cpp/src/utils/: Base64Utils.cpp  CommandUtils.cpp  DetectorUtils.cpp  FileUtils.cpp  MiscUtil.cpp  StringUtils.cpp  SyscallUtils.cpp  XsonCollector.cpp
app/src/main/java/com/xiaoc/warlock/: App.java  BuildConfig.java  MainActivity.java
app/src/main/java/com/xiaoc/warlock/Core/: BaseCollector.java  BaseDetector.java  CollectCallback.java  DetectCallback.java  EnvironmentDetector.java  FingerprintCollector.java  Warlock.java
app/src/main/java/com/xiaoc/warlock/Core/collector/: BasicInfoCollector.java  MiscInfoCollector.java  PhoneInfoCollector.java  SignatureCollector.java  StatCollector.java  StatInfoCollector.java  SystemInfoCollector.java  WebViewInfoCollector.java
app/src/main/java/com/xiaoc/warlock/Core/detector/: BootloaderStateChecker.java  CloudPhoneDetector.java  HookDetector.java  MiscDetector.java  RootDetector.java  SandboxDetector.java  SignatureDetector.java  VirtualDetector.java  XposedDetector.java
app/src/main/java/com/xiaoc/warlock/Provider/: AppProvider.java
app/src/main/java/com/xiaoc/warlock/Util/: API.java  AppChecker.java  ClipboardUtil.java  InfoValue.java  MiscUtil.java  NativeEngine.java  WarningBuilder.java  XCommandUtil.java  XFile.java  XLog.java  XNetwork.java  XString.java  XTime.java  Xson.java
app/src/main/java/com/xiaoc/warlock/crypto/: AESUtil.java  Base64Util.java  CompressUtil.java  EncryptUtil.java  MD5Util.java
app/src/main/java/com/xiaoc/warlock/manager/: ServerManager.java
app/src/main/java/com/xiaoc/warlock/network/: NetworkClient.java
app/src/main/java/com/xiaoc/warlock/service/: WarLockServer.java
app/src/main/java/com/xiaoc/warlock/ui/: MainUI.java
app/src/main/java/com/xiaoc/warlock/ui/adapter/: InfoAdapter.java  InfoItem.java  ViewPagerAdapter.java
app/src/main/java/com/xiaoc/warlock/ui/dialog/: DialogManager.java
app/src/main/java/com/xiaoc/warlock/ui/fragment/: EnvironmentFragment.java  FingerprintFragment.java
app/src/main/res/drawable/: ic_expand_more.xml  ic_security.xml
app/src/main/res/layout/: activity_main.xml  dialog_settings.xml  fragment_environment.xml  fragment_fingerprint.xml  item_detail.xml  item_empty_state.xml  item_info_card.xml  layout_menu_sheet.xml
app/src/main/res/menu/: menu_main.xml  menu_popup.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xiaoc/warlock/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
resource/: warlock采集字段定义.txt
